app/stylesheets/layout.scss
@import 'config/dimensions';
@import 'global';

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

.header {
  height: $header-height;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.filters {
  height: $filters-closed-height;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 3;
}

.main {
  bottom: $footer-height;
  left: 0;
  position: absolute;
  right: 0;
  top: $header-height;

  .map-container {
    z-index: 1;
  }

  .charts-container {
    bottom: 0;
    height: $charts-above-height;
    left: 0;
    position: absolute;
    right: 0;
    transition: height 200ms ease;
    z-index: 2;

    &.open {
      height: 100%;
    }
  }
}

.footer {
  bottom: 0;
  left: 0;
  min-height: $footer-height;
  position: absolute;
  right: 0;
}

